# Mocoto

./: .gitignore  CMakeLists.txt  G4History.macro  GNUmakefile  Mocoto.cc  createjob.py  init_vis.mac  run.mac  vis.mac
Job/: xray_120keV_1mmAluminum.root
Simulation/: CMakeLists.txt  main.cc
Simulation/include/: MCDataFiles.hh  MctSimulation.hh
Simulation/src/: MCDataFiles.cc  MctSimulation.cc
include/: MocotoAnalysisManager.hh  MocotoAnalysisManagerMessenger.hh  MocotoDetectorConstruction.hh  MocotoDetectorConstructionMessenger.hh  MocotoDetectorHit.hh  MocotoDetectorSD.hh  MocotoEventAction.hh  MocotoMCTDetector.hh  MocotoPhysicsList.hh  MocotoPrimaryGeneratorAction.hh  MocotoPrimaryGeneratorMessenger.hh  MocotoRCTDetector.hh  MocotoRunAction.hh  MocotoSteppingAction.hh  MocotoTarget.hh  MocotoTargetMessenger.hh  MocotoVolume.hh  MocotoVolumeBase.hh  MocotoVolumeMCT.hh  MocotoVolumeRCT.hh  MocotoVolumeTarget.hh  OpticalProperty.icc  VarianPaxScanDigitalImagerReceptor.hh
src/: MocotoAnalysisManager.cc  MocotoAnalysisManagerMessenger.cc  MocotoDetectorConstruction.cc  MocotoDetectorConstructionMessenger.cc  MocotoDetectorHit.cc  MocotoDetectorSD.cc  MocotoEventAction.cc  MocotoPhysicsList.cc  MocotoPrimaryGeneratorAction.cc  MocotoPrimaryGeneratorMessenger.cc  MocotoRCTDetector.cc  MocotoRunAction.cc  MocotoSteppingAction.cc  MocotoSteppingAction.cc.bac  MocotoTarget.cc  MocotoTargetMessenger.cc  MocotoVolume.cc  MocotoVolumeBase.cc  MocotoVolumeMCT.cc  MocotoVolumeRCT.cc  MocotoVolumeTarget.cc  VarianPaxScanDigitalImagerReceptor.cc
